# rust-askama-htmx-actix

server/: Cargo.toml
server/src/: main.rs
server/templates/: hello.html  index.html
ui/: index.html
